objects/TMS_Territory__c.object
<CustomObject>
    <description>CRM-11668 :Display Territories in GLI - SFDC Territory Custom Objects</description>
    <fields>
        <fullName>AccountAccessLevel__c</fullName>
        <label>AccountAccessLevel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Territories</relationshipLabel>
        <relationshipName>TMS_Territories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CaseAccessLevel__c</fullName>
        <label>CaseAccessLevel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactAccessLevel__c</fullName>
        <label>ContactAccessLevel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <description>Created for R4</description>
        <label>DeveloperName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ForecastUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TMS_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_AccountTeamMemberUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountTeamMemberUserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountTeamMembersUserId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Account_team_role__c</fullName>
        <formula>TMS_Sales_Force_Desc__c+&apos;-&apos;+TMS_Market_Segment_Desc__c+&apos;-&apos;+TMS_Rep_Function_Desc__c

/*TMS_Market_Segment_Desc__c+&apos;-&apos;+TMS_Sales_Force_Desc__c+&apos;-&apos;+TMS_Rep_Function_Desc__c*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account team role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MayForecastManagerShare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MayForecastManagerShare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityAccessLevel__c</fullName>
        <label>OpportunityAccessLevel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentTerritory__c</fullName>
        <label>ParentTerritory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestrictOpportunityTransfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RestrictOpportunityTransfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMS_Market_Segment_Code__c</fullName>
        <label>TMS Market Segment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Market_Segment_Desc__c</fullName>
        <label>TMS Market Segment Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Market_Segment_ID__c</fullName>
        <label>TMS Market Segment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_New_Sales_Quota_Curr_Yr__c</fullName>
        <label>TMS New Sales Quota - Curr Yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TMS_Parent_Territory_ID__c</fullName>
        <label>TMS Parent Territory ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_Ref_Function_Code__c</fullName>
        <label>TMS Ref Function Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Renewal_Sales_Quota_Curr_Yr__c</fullName>
        <label>TMS Renewal Sales Quota - Curr Yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TMS_Rep_Function_Desc__c</fullName>
        <label>TMS Rep Function Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Rep_Function_ID__c</fullName>
        <label>TMS Rep Function ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_Sales_Force_Code__c</fullName>
        <label>TMS Sales Force Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Sales_Force_Desc__c</fullName>
        <label>TMS Sales Force Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Sales_Force_ID__c</fullName>
        <label>TMS Sales Force ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_Territory_ID__c</fullName>
        <label>TMS Territory ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_Territory_Number__c</fullName>
        <label>TMS Terr Num</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_ID__c</fullName>
        <label>Territory ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>TMS Territory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMS Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>